Create login and tweet list page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Twipe</string>
+  <string name="app_name">Twipe</string>
+  <string name="logout">ログアウト</string>
+  <string name="retweeted_msg">%1$sさんがリツイートしました</string>
 </resources>
