--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
   <string name="app_name">Twipe</string>
   <string name="logout">ログアウト</string>
   <string name="retweeted_msg">%1$sさんがリツイートしました</string>
+
+  <string name="open">開く</string>
+  <string name="close">閉じる</string>
 </resources>
